--- a/styles/index.css
+++ b/styles/index.css
@@ -1,43 +1,126 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-align: center;
 }
-.container{
-width: 90%;
-height: auto;
-margin: auto;
-box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
-border-radius: 50px;
-border: 1px solid red;
+
+.container {
+  width: 90%;
+  height: auto;
+  margin: auto;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+  border-radius: 50px;
+  /* border: 1px solid red; */
+  background-color: rgb(237, 242, 245);
 }
-.header{
-    width: 95%;
-    height: 50px;
-    border: 1px solid rgb(42, 146, 80);
+header {
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+.header {
+  width: 100%;
+  height: 50px;
     padding: 10px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-radius: 5px;
+  background-color: black;
+  
+}
+.logo-img img {
+  border-radius: 50%;
+  cursor: pointer;
+}
+.search-bar input {
+  width: 917px;
+  height: 50px;
+  border-radius: 20px;
+  outline: none;
+}
+/* carousel css */
+.carousel-section{
+    width: 95%;
+  
+    margin: 20px 0px ;
     margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: sticky;
-    top: 0;
-    left: 0;
-   
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+    z-index: -1;
+  
 }
-.logo-img img{
-   border-radius: 50%;
-   cursor: pointer;
-
-}
-.search-bar input{
-    width: 917px;
-    height: 50px;
+.slick-slider img{
+    width: 430px;
+    height: 350px;
     border-radius: 20px;
-    outline: none;
-    
-   
+    margin: 10px;
+    object-fit: cover;
+}
 
+/* content css */
+.content-container {
+  width: 80%;
+  height: auto;
+  margin: auto;
+  display: grid;
+  gap: 10px;
+  grid-template-columns: repeat(4, 1fr);
+  padding: 10px;
+}
+.child-content {
+  height: 300px;
+  background-color: #1a202c;
+  color: white;
+  border-radius: 10px;
+  transition: all .3s linear;
+}
+.child-content:hover{
+    transform: scale(1.1);
+}
+.child-content img {
+  width: 100%;
+  border-radius: 10px 10px 0px 0px;
+  margin: auto;
+  height: 80%;
+}
+
+/* calender section */
+#calender-section input{
+    width: 70%;
+    height: 50px;
+    margin: 50px;
+}
+
+
+/* map section css */
+h1{
+    color:teal ;
+    font-family: 'Times New Roman', Times, serif;
+    margin-left: 5%;
+    
+}
+.gmap_canvas {overflow:hidden;
+    background:none!important;
+    width:100%;
+    height:auto;
+    margin-left: auto;
+   border-radius: 5px;
+
+}
+#con{
+    width: 100%;
+    height: auto;
+    margin: auto;
+   
+    text-align: center;
+    
+}
+.mapouter{
+     width: 100%;
+    height: auto;
+    margin: auto;
+ 
+    text-align: center;
 }
