--- a/styles/index.css
+++ b/styles/index.css
@@ -29,7 +29,7 @@ header {
   justify-content: space-between;
   align-items: center;
   border-radius: 5px;
-  background-color: black;
+  background-color: #4489cd;
   
 }
 .logo-img img {
