--- a/styles/login.css
+++ b/styles/login.css
@@ -4,23 +4,42 @@
   box-sizing: border-box;
   text-align: center;
 }
-.login-container {
+/* .signup-container {
   width: 400px;
   height: auto;
   margin: auto;
   border-radius: 20px;
 }
-.login-container form {
+.signup-container form {
   width: 100%;
   height: auto;
   margin: auto;
   border-radius: 20px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
-.login-container input {
+.signup-container input {
   display: block;
   width: 100%;
   height: 40px;
   outline: none;
   margin: 10px 0px;
+} */
+
+ input
+ {
+  width: 90%;
+  display: block;
+  margin: auto;
+  margin-top: 15px;
+  font-size: 20px;
+  padding: 2%;
+}
+ form {
+  width: 400px;
+  border: 1px solid rgb(230, 230, 230);
+  margin: 3% auto;
+  padding: 3%;
+  background: white;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
